# Binary-Decision-Diagram-package

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  Manager.cpp  Manager.h  main.cpp
src/bench/: BenchParser.cpp  main_bench.cpp
src/reachability/: Reachability.cpp  Reachability.h  Tests.h  main_test.cpp
src/test/: CMakeLists.txt  Tests.h  main_test.cpp  tst_testManager.cpp
src/verify/: CMakeLists.txt
